# ember

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL_WITH_AI.md  README.md  README.pt-br.md  pyproject.toml
.github/workflows/: ci.yml  nightly-smoke.yml  release.yml
docs/: README.md  benchmarks.md  memory.md  prompt-cache.md  response-format.md  tools.md  vision.md
examples/: com.ember.server.plist  continue.config.yaml  models-16gb.yaml  models-32gb.yaml  models-64gb.yaml  models-8gb.yaml  models.yaml
scripts/: bench_speculative_decoding.py  nightly_smoke.sh
src/ember/: __init__.py  __main__.py  cli.py  memory_policy.py  registry.py  server.py
tests/: test_ac_em_keep_alive.py  test_api_key_health_shutdown.py  test_body_validation.py  test_cancel_abandoned.py  test_chat_cache.py  test_cli.py  test_cli_auth.py  test_embeddings.py  test_fim_cache.py  test_http_keepalive.py  test_kv_bits_default.py  test_memory.py  test_memory_policy.py  test_metrics.py  test_num_ctx.py  test_oom_retry.py  test_registry.py  test_sampling.py  test_sse_coalesce.py  test_tools.py  test_unload_clear.py  test_vision_images.py  test_vlm.py  test_warm_alias.py
